--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Convert MCQs to PDF",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx puppeteer install"
   },
   "dependencies": {
     "express": "^4.19.2",
