--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Convert MCQs to PDF",
   "main": "server.js",
-  "scripts": {
+"scripts": {
     "start": "node server.js",
-    "postinstall": "npx puppeteer browsers install chrome"
-  },
-  "dependencies": {
+    "postinstall": "npx playwright install chromium"
+    },
+"dependencies": {
     "express": "^4.19.2",
-    "puppeteer": "^22.0.0"
-  }
+    "playwright": "^1.43.0"
+    }
 }
